--- a/7/index.html
+++ b/7/index.html
@@ -29,6 +29,6 @@
     </div>
   </div>
   <script src='https://code.jquery.com/jquery-3.2.1.min.js' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4='crossorigin='anonymous'></script>
-  <script src="/6-2/app.js"></script>
+  <script src="/7/app.js"></script>
 </body>
 </html>
