Use class syntax, fetch multiple pages at once, and do local filtering

--- a/7/index.html
+++ b/7/index.html
@@ -14,17 +14,17 @@
         <form>
           <label for="genre">Type in your favourite genre:</label>
           <select onchange="app.onGenreChange(this)" name="genre" id="genre">
-            <option value="rock">Rock</option>
-            <option value="pop">Pop</option>
-            <option value="hiphop">Hip Hop / Rap</option>
-            <option value="soul">R&B / Soul</option>
+            <option value="Rock">Rock</option>
+            <option value="Pop">Pop</option>
+            <option value="Hip Hop/Rap">Hip Hop / Rap</option>
+            <option value="R&B/Soul">R&B / Soul</option>
           </select>
         </form>
       </div>
     </div>
     <div class="row">
       <div class="col">
-        <div class="list-group track-list"></div>
+        <div class="track-list"></div>
       </div>
     </div>
   </div>
